--- a/app/views/goods/modals/_new_movement.html.erb
+++ b/app/views/goods/modals/_new_movement.html.erb
@@ -7,28 +7,25 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <%= form_with(model: [good, Movement.new], remote: true, id: 'movement-form', class: 'needs-validation', html: { novalidate: :true }) do |form| %>
+      <%= form_with(model: [good, Movement.new], remote: true, id: 'movement-form') do |form| %>
         <div class="modal-body">
           <div class="form-group">
             <%= form.label :date %>
-            <%= datepicker_field(form, :date, { required: true }) do %>
-              <div class='invalid-feedback'>
-                <%= t('views.validations.required') %>
+            <%= datepicker_field(form, :date) do %>
+              <div id="date_validation_msg" class='invalid-feedback'>
               </div>
             <% end %>
           </div>
           <div class="form-group">
             <%= form.label :department_id %>
-            <%= form.select :department_id, grouped_options_for_select(departments), { prompt: :prompt_text }, class: 'form-control', required: true %>
-            <div class='invalid-feedback'>
-              <%= t('views.validations.required') %>
+            <%= form.select :department_id, grouped_options_for_select(departments), { prompt: :prompt_text }, class: 'form-control'%>
+            <div id="department_id_validation_msg" class='invalid-feedback'>
             </div>
           </div>
           <div class="form-group">
             <%= form.label :movement_kind_id %>
-            <%= form.select :movement_kind_id, movement_kids, { prompt: :prompt_text }, class: 'form-control', required: true %>
-            <div class='invalid-feedback'>
-              <%= t('views.validations.required') %>
+            <%= form.select :movement_kind_id, movement_kids, { prompt: :prompt_text }, class: 'form-control'%>
+            <div id="movement_kind_id_validation_msg" class='invalid-feedback'>
             </div>
           </div>
         </div>
@@ -41,18 +38,4 @@
       <% end %>
     </div>
   </div>
-  <script>
-    $(document).ready(function() {
-      // $("#movement-form").on("ajax:success", function(event) {
-      //   [data, status, xhr] = event.detail
-      //   console.log(xhr.responseText)
-      //   // $('#movements-table > tbody').append(xhr.responseText)
-      //   // $('#new-movement-modal').modal('hide')
-      // });
-      $("#movement-form").on("ajax:error", function(event) {
-        [data, status, xhr] = event.detail
-        console.log(xhr.responseText)
-      });
-    });
-  </script>
 </div>
