--- a/app/views/movements/create.js.erb
+++ b/app/views/movements/create.js.erb
@@ -1,11 +1,1 @@
-$(document).ready(function() {
-$('#movements-table > tbody').append("
-<tr>
-  <td><%= @movement.code %></td>
-  <td><%= l @movement.date %></td>
-  <td><%= MovementKind.t @movement.movement_kind.description %></td>
-  <td><%= @movement.department.description %></td>
-</tr>
-")
-$('#new-movement-modal').modal('hide')
-});
+'<tr><td><%= @movement.code %><td><%= l @movement.date %></td></td><td><%= MovementKind.t @movement.movement_kind.description %></td>"<td><%= @movement.department.description %></td></tr>'
