implementado o cadastro de reavaliçoes para o bem

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -19,8 +19,8 @@
 //= require bootstrap-datepicker
 //= require_tree .
 $(document).on("turbolinks:load", function () {
-  $('#btn-datepicker').on('click', function () {
-    $('.datepicker-input').datepicker('show')
+  $('.btn-datepicker').on('click', function () {
+    $($(this).parent()).parent().find('.datepicker-input').datepicker('show')
   })
   $('.datepicker-input').datepicker({
     todayBtn: "linked",
@@ -30,18 +30,18 @@ $(document).on("turbolinks:load", function () {
     todayHighlight: 'true'
   })
 });
-$(document).on("turbolinks:load", function () {
-  'use strict';
-  // Fetch all the forms we want to apply custom Bootstrap validation styles to
-  var forms = document.getElementsByClassName('needs-validation');
-  // Loop over them and prevent submission
-  var validation = Array.prototype.filter.call(forms, function (form) {
-    form.addEventListener('submit', function (event) {
-      if (form.checkValidity() === false) {
-        event.preventDefault();
-        event.stopPropagation();
-      }
-      form.classList.add('was-validated');
-    }, false);
-  });
-});
+// $(document).on("turbolinks:load", function () {
+//   'use strict';
+//   // Fetch all the forms we want to apply custom Bootstrap validation styles to
+//   var forms = document.getElementsByClassName('needs-validation');
+//   // Loop over them and prevent submission
+//   var validation = Array.prototype.filter.call(forms, function (form) {
+//     form.addEventListener('submit', function (event) {
+//       if (form.checkValidity() === false) {
+//         event.preventDefault();
+//         event.stopPropagation();
+//       }
+//       form.classList.add('was-validated');
+//     }, false);
+//   });
+// });
