--- a/app/views/goods/show.html.erb
+++ b/app/views/goods/show.html.erb
@@ -13,7 +13,7 @@
   </ul>
   <div class="tab-content" id="good_tab_content">
     <%= render 'goods/show_tabs/register', good: @good %>
-    <%= render 'goods/show_tabs/movements', good: @good, movements: @good.movements, departments: @departments, movement_kids: @movement_kids %>
+    <%= render 'goods/show_tabs/movements', good: @good, movements: @good.movements, departments: @departments, movement_kinds: @movement_kinds %>
     <%= render 'goods/show_tabs/financial_movements', good: @good, financial_movements: @good.financial_movements %>
   </div>
 </div>
