--- a/app/views/goods/show_tabs/_movements.html.erb
+++ b/app/views/goods/show_tabs/_movements.html.erb
@@ -20,5 +20,5 @@
       <% end %>
     </tbody>
   </table>
-  <%= render 'goods/modals/new_movement', good: good, departments: departments, movement_kids: movement_kids %>
+  <%= render 'goods/modals/new_movement', good: good, departments: departments, movement_kinds: movement_kinds %>
 </div>
