--- a/app/views/goods/modals/_new_movement.html.erb
+++ b/app/views/goods/modals/_new_movement.html.erb
@@ -24,7 +24,7 @@
           </div>
           <div class="form-group">
             <%= form.label :movement_kind_id %>
-            <%= form.select :movement_kind_id, movement_kids, { prompt: :prompt_text }, class: 'form-control'%>
+            <%= form.select :movement_kind_id, movement_kinds, { prompt: :prompt_text }, class: 'form-control'%>
             <div id="movement_kind_id_validation_msg" class='invalid-feedback'>
             </div>
           </div>
