implementada classe de depreciaçao e adicionado alias para os relacionamentos

--- a/app/views/good_categories/index.html.erb
+++ b/app/views/good_categories/index.html.erb
@@ -20,7 +20,7 @@
           <tr>
             <td><%= link_to good_category.description, good_category %></td>
             <td><%= t_active good_category.active %></td>
-            <td><%= good_category.good_sub_kind.description %></td>
+            <td><%= good_category.sub_kind.description %></td>
           </tr>
         <% end %>
       </tbody>
