--- a/app/views/goods/show_tabs/_movements.html.erb
+++ b/app/views/goods/show_tabs/_movements.html.erb
@@ -14,7 +14,7 @@
         <tr>
           <td><%= movement.code %></td>
           <td><%= l movement.date %></td>
-          <td><%= MovementKind.t movement.movement_kind.description %></td>
+          <td><%= MovementKind.t movement.kind.description %></td>
           <td><%= movement.department.description %></td>
         </tr>
       <% end %>
