--- a/app/views/goods/_form.html.erb
+++ b/app/views/goods/_form.html.erb
@@ -39,7 +39,7 @@
   </div>
   <div class="form-group">
     <%= form.label :good_category_id %>
-    <%= form.select :good_category_id, good_categories, { prompt: :select_text }, class: 'form-control' %>
+    <%= form.select :good_category_id, categories, { prompt: :select_text }, class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= form.label :department_id %>
