corrigido erro na view create do movement

--- a/app/views/movements/create.js.erb
+++ b/app/views/movements/create.js.erb
@@ -1,1 +1,1 @@
-'<tr><td><%= @movement.code %><td><%= l @movement.date %></td></td><td><%= MovementKind.t @movement.movement_kind.description %></td>"<td><%= @movement.department.description %></td></tr>'
+'<tr><td><%= @movement.code %><td><%= l @movement.date %></td></td><td><%= MovementKind.t @movement.kind.description %></td>"<td><%= @movement.department.description %></td></tr>'
