--- a/app/views/goods/modals/_new_financial_movement.html.erb
+++ b/app/views/goods/modals/_new_financial_movement.html.erb
@@ -19,7 +19,7 @@
           </div>
           <div class="form-group">
             <%= form.label :amount %>
-            <%= form.number_field :amount, min: 0.01, class: 'form-control'%>
+            <%= form.number_field :amount, min: 0.01, step: 0.01, class: 'form-control'%>
             <div id="financial_movement_amount_validation_msg" class='invalid-feedback'>
             </div>
           </div>
