criado controller para depreciação

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,4 +17,7 @@
   <li class="nav-item">
     <%= link_to Department.model_name.human(count: 2), departments_path, class: 'nav-link' %>
   </li>
+  <li class="nav-item">
+    <%= link_to t('views.home.links.depreciation'), depreciation_path, class: 'nav-link' %>
+  </li>
 </ul>
