--- a/app/views/goods/_form.html.erb
+++ b/app/views/goods/_form.html.erb
@@ -31,11 +31,11 @@
   </div>
   <div class="form-group">
     <%= form.label :purchase_date %>
-    <%= datepicker_field(form, :purchase_date) %>
+    <%= form_datepicker_field(form, :purchase_date) %>
   </div>
   <div class="form-group">
     <%= form.label :base_date %>
-    <%= datepicker_field(form, :base_date) %>
+    <%= form_datepicker_field(form, :base_date) %>
   </div>
   <div class="form-group">
     <%= form.label :good_category_id %>
