--- a/app/views/goods/modals/_new_financial_movement.html.erb
+++ b/app/views/goods/modals/_new_financial_movement.html.erb
@@ -12,7 +12,7 @@
         <div class="modal-body">
           <div class="form-group">
             <%= form.label :date %>
-            <%= datepicker_field(form, :date) do %>
+            <%= form_datepicker_field(form, :date) do %>
               <div id="financial_movement_date_validation_msg" class='invalid-feedback'>
               </div>
             <% end %>
