adicionado campo de sub tipo na view da depreciação

--- a/app/assets/javascripts/depreciation.js.erb
+++ b/app/assets/javascripts/depreciation.js.erb
@@ -16,3 +16,15 @@
 //     }
 //   });
 // });
+
+$(document).on('turbolinks:load', function () {
+  $("select#kind").change(function () {
+    if ($(this).val() != "") {
+      console.log("s")
+      $("div#sub_kind_group").show()
+    } else {
+      console.log("h")
+      $("div#sub_kind_group").hide()
+    }
+  })
+});
