--- a/app/views/depreciation/index.html.erb
+++ b/app/views/depreciation/index.html.erb
@@ -9,14 +9,20 @@
         <%= datepicker_field(:movement_date) %>
         <%= submit_tag t('views.depreciation.actions.depreciate'), class: 'btn btn-primary ml-2' %>
       <% end %>
-      <%= form_tag depreciation_path do |f| %>
+      <%= form_tag depreciation_path, method: :get do |f| %>
+        <div class="row no-gutters">
+        </div>
         <div class="form-group">
           <%= label_tag :kind, t('activerecord.models.good_kind.one') %>
-          <%= select_tag :kind, options_for_select(@kinds), prompt: t('views.all'), class: 'form-control' %>
+          <%= select_tag :kind, options_for_select(@kinds), selected: params[:kind], prompt: t('views.all.male'), class: 'form-control' %>
         </div>
-        <div id="sub_kind_group" class="form-group" style="display: none;">
+        <div id="sub_kind_group" class="form-group">
           <%= label_tag :sub_kind, t('activerecord.models.good_sub_kind.one') %>
-          <%= select_tag :sub_kind, nil, prompt: t('views.all'), class: 'form-control' %>
+          <%= select_tag :sub_kind, nil, prompt: t('views.all.male'), class: 'form-control' %>
+        </div>
+        <div id="category_group" class="form-group">
+          <%= label_tag :category, t('activerecord.models.good_category.one') %>
+          <%= select_tag :category, nil, prompt: t('views.all.female'), class: 'form-control' %>
         </div>
         <div class="actions">
           <%= submit_tag t('views.depreciation.actions.depreciate'), class: 'btn btn-primary' %>
@@ -51,3 +57,17 @@
     </div>
   </div>
 </div>
+<script>
+  function subKindOptions() {
+    let options = ""
+    return options
+  }
+  function categoryOptions() {
+    let categories = "<%= @categories %>"
+    var html = ''
+    categories[$("select#sub_kind").val()].forEach(e => {
+      '<option value=' + e[1] + '>' + e[0] + '</option>'
+    });
+    return options
+  }
+</script>
