--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,3 +38,19 @@ body {
 select {
   max-width: fit-content;
 }
+
+.fit-content {
+  max-width: fit-content;
+}
+
+.wd-1 {
+  width: 150px;
+}
+
+.wd-2 {
+  width: 200px;
+}
+
+.wd-3 {
+  width: 250px;
+}
